--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!--Front Page-->
         <section class="dev">
             <div class="who-am-i">
-                <h1>I’m abdelaziz, Glad to see you!</h1>
+                <h1>I’m Abdelaziz, Glad to see you!</h1>
                 <p>I’m a software developer! I can help you build a product , feature or website Look through some of my
                     work and experience! If you like what you see and have a project you need coded, don’t hestiate to
                     contact me.</p>
@@ -112,12 +112,13 @@
                             </ul>
                             <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
                             <ul class="card-tags">
-                                <li class="languge">html</li>
-                                <li class="languge">css</li>
-                                <li class="languge">javascript</li>
+                                <li>html</li>
+                                <li>css</li>
+                                <li>javascript</li>
                             </ul>
                             <button class="card-button" type="submit">See Project</button>
-                  </div></section>
+                  </div>
+                </section>
                     <section class="card card1">
                         <img src="img/Snapshoot-Portfolio1.svg" class="img-i" alt="Snapshoot-Portfolio">
                         <div class="card-block">
