Add padding for header style

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                     fill="#505F79" />
                             </svg>
                         </a></li>
-                    <!-- LinkedIn -->
+                    <!-- Linked in -->
                     <li><a href="https://www.linkedin.com/in/abdelaziz-soliman-16989b89/" aria-label="linkedin icon">
                             <svg width="20" height="20" viewBox="0 0 20 20" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
@@ -98,6 +98,8 @@
             </div>
         </section>
         <!--work section-->
+
+        
             <section class="experience">
                 <section class="card">  
                     <img src="img/Snapshoot Portfolio.svg" class="img-i" alt="Snapshoot-Portfolio">
@@ -115,8 +117,7 @@
                                 <li>javascript</li>
                             </ul>
                             <button class="card-button" type="submit">See Project</button>
-                  </div>
-                </section>
+                  </div></section>
                     <section class="card card1">
                         <img src="img/Snapshoot-Portfolio1.svg" class="img-i" alt="Snapshoot-Portfolio">
                         <div class="card-block">
@@ -172,6 +173,8 @@
                     </div>
                 </section>
             </section>
+
+        
 
         <!-- About -->
         <section class="about" id="About">
