Add animations and transission functions

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         
             <section class="experience">
-                <section class="card">  
+                <section class="card" id="Portfolio">  
                     <img src="img/Snapshoot Portfolio.svg" class="img-i" alt="Snapshoot-Portfolio">
                         <div class="card-block" id="arti-1">
                             <h2>Tonic</h2>
