Add index.html as deleted by mistake

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--External style sheet-->
     <link rel="stylesheet" href="styles.css">
     <!--Font Awesome-->
-    <script src="https://kit.fontawesome.com/a4f3734cb0.js" crossorigin="anonymous"></script>
+    <script src="https:git//kit.fontawesome.com/a4f3734cb0.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
