menu with hamburger

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 </head>
 
 <body>
-    <!-- Overlay -->
-    <div class="overlay disable"></div>
     <header class="header">
         <nav class="navigation">
             <p class="logo">
@@ -37,7 +35,7 @@
     </header>
     <main>
         <!--Front Page-->
-        <section class="dev">
+        <section class="dev" id="Portfolio">
             <div class="who-am-i">
                 <h1>I’m Abdelaziz, Glad to see you!</h1>
                 <p>I’m a software developer! I can help you build a product , feature or website Look through some of my
@@ -282,6 +280,7 @@
         </section>
     </footer>
     </main>
+    <script src="main.js"></script>
 </body>
 
 </html>
